# pybloom

./: .coverage  .gitignore  README.md  db_utils.py  pybloom.py  pyproject.toml  requirements.txt  sitecustomize.py
app/: __init__.py  content.py  routes.py
app/templates/: base.html  colours.html  index.html
docs/: PyBloom-v1-manual.md  PyBloom-v2-manual.md  PyBloom_manual.html  README.md
tests/: conftest.py  test.py  test_pybloom.py
