[project]
name = "pybloom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler==3.6.3",
    "certifi==2020.6.20",
    "chardet==3.0.4",
    "click==7.1.2",
    "flask==1.1.2",
    "geojson==2.5.0",
    "idna==2.10",
    "itsdangerous==1.1.0",
    "jinja2==2.11.2",
    "markupsafe==1.1.1",
    "pygal==2.4.0",
    "pyowm==3.1.1",
    "pysocks==1.7.1",
    "python-dateutil>=2.9.0.post0",
    "pytz==2020.1",
    "qhue==1.0.12",
    "pytest>=8.0.0",
    "requests==2.24.0",
    "rgbxy==0.5",
    "six==1.15.0",
    "tzlocal==2.1",
    "urllib3==1.25.11",
    "werkzeug==1.0.1",
]
