[project]
name = "pybloom"
version = "0.2.0"
description = "Indicate the outside temperature on Philips Hue lights."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler==3.11.2",
    "blinker==1.9.0",
    "click==8.2.1",
    "flask==3.1.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "werkzeug==3.1.3",
    "pygal==3.1.0",
    "pyowm==3.5.0",
    "python-dateutil>=2.9.0.post0",
    "qhue==2.0.1",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "requests==2.32.3",
    "rgbxy==0.5",
    "urllib3==2.3.0",
    "certifi==2025.1.31",
    "idna==3.10",
    "setuptools<82",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=db_utils --cov=pybloom --cov=app --cov-report=term-missing"
